Fix some thanking bugs, consistent tag truncating

--- a/app/static/sass/style.scss
+++ b/app/static/sass/style.scss
@@ -1285,16 +1285,31 @@ body {
   }
 }
 
-@keyframes shrink-y {
+@keyframes grow {
   0% {
-    opacity: 1;
-    max-height: 500px;
+    opacity: 0;
+    transform: scale(.5);
+    max-width: 0;
+    max-height: 0;
   }
 
   100% {
+    opacity: 1;
+    max-width: 500px;
+    max-height: 500px;
+  }
+}
+
+@keyframes grow-y {
+  0% {
     opacity: 0;
     transform: scale(.5);
     max-height: 0;
+  }
+
+  100% {
+    opacity: 1;
+    max-height: 500px;
   }
 }
 
@@ -1401,6 +1416,10 @@ body {
 
 .js--comment-remove {
   animation: shrink-y .3s;
+}
+
+.js--new-comment {
+  animation: grow-y .3s;
 }
 
 /*-----------------------------------*\
